# tree-model-prototype

./: CMakeLists.txt  README.md  main.cpp
mergeproxymodel/: CMakeLists.txt  mergeproxymodel.cpp  mergeproxymodel.h
tree-model-lib/: CMakeLists.txt  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
